--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,8 @@
+:root {
+  --cursor-link: url('/static/img/link.ico'), auto;
+  --cursor-pointer: url('/static/img/pointer.ico'), pointer;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -8,10 +13,12 @@ html, body {
   height: 100%;
   overflow: hidden;
   background-color: #f3f3f3;
+  cursor: var(--cursor-link);
 }
 
 a {
   text-decoration: none;
+  cursor: var(--cursor-pointer);
 }
 
 
