--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,24 +3,43 @@
   --cursor-pointer: url('/static/img/pointer.ico'), pointer;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #49b1f5;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
 * {
   padding: 0;
   margin: 0;
 }
+html {
+  font-size: 20px
+}
 
-html, body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+body {
   background-color: #f3f3f3;
-  cursor: var(--cursor-link);
+  cursor: var(--cursor-link, auto);
+  font-size: 14px;
 }
 
 a {
   text-decoration: none;
-  cursor: var(--cursor-pointer);
+  cursor: var(--cursor-pointer, pointer);
 }
 
+.clear-float::after {
+  content: '';
+  display: block;
+  clear: both;
+}
 
 .move-enter-active,
 .move-leave-active {
