--- a/static/css/common.less
+++ b/static/css/common.less
@@ -1,3 +1,18 @@
 @main-color: #4c4948;
 @gray-color: #eee;
 @blue-color: #49b1f5;
+@orange-color: #ff7242;
+@red-color: red;
+
+.card {
+  padding: 1rem 1.2rem;
+  border-radius: 8px;
+  background-color: white;
+  box-shadow: 0 4px 8px 6px rgba(7, 17, 27, 0.06);
+}
+
+.one-line-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
