--- a/static/css/common.less
+++ b/static/css/common.less
@@ -2,7 +2,12 @@
 @gray-color: #eee;
 @blue-color: #49b1f5;
 @orange-color: #ff7242;
-@red-color: red;
+@red-color: #ff7242;
+@grag-time-color: #858585;
+@opacity-bg: rgba(0, 0, 0, 0.5);
+@catagory-bg: #f6f8fa;
+
+@banner-height: 20rem;
 
 .card {
   padding: 1rem 1.2rem;
