--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,7 +21,7 @@
   margin: 0;
 }
 html {
-  font-size: 20px
+  font-size: 20px;
 }
 
 body {
@@ -49,16 +49,6 @@ img {
   content: '';
   display: block;
   clear: both;
-}
-
-.move-enter-active,
-.move-leave-active {
-  transition: opacity .5s;
-}
-
-.move-enter,
-.move-leave {
-  opacity: 0;
 }
 
 .flex-row {
