--- a/static/css/common.less
+++ b/static/css/common.less
@@ -1,6 +1,7 @@
 @main-color: #4c4948;
 @gray-color: #eee;
 @blue-color: #49b1f5;
+@blue-opacity-color: rgba(73,177,245, 0.5);
 @orange-color: #ff7242;
 @red-color: #ff7242;
 @grag-time-color: #858585;
